<resources>
    <string name="app_name">Parcial 2</string>
    <!-- Strings related to login -->
    <string name="prompt_cedula">Cedula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Iniciar session</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es una cédula valida</string>
    <string name="invalid_password">La contraseña debe tenere más de 5 caracteres</string>
    <string name="login_failed">"Login fallido"</string>
    <string name="hist_notas">"Su historial de notas es:</string>
    <string name="editaUsuario">Editar Usuario</string>"
</resources>
